syntax = "proto3";

package talkpb;

service Talk {
	// 聊天
	rpc Talk(TalkReq) returns (TalkResp) {}
}

enum MSGTYPE {
	TEXT = 0;
	RICHTEXT = 1;
	VOICE = 2;
}
message TextMsg {
	string text = 1;
}
message RichTextMsg {
	string text = 1;
	// any other properties ?
}
message VoiceMsg {
	bytes data = 1;
}

enum TALKCHANNEL {
	// 单聊频道
	P2P = 0;
	// 房间频道
	P2R = 1;
}
message P2PRecver {
	repeated int32 uid = 1;
}
message P2RRecver {
	repeated string roomid = 1;
}

message TalkReq {
	int32 uid = 1;
	TALKCHANNEL channel = 2;
	MSGTYPE type = 3;
	TextMsg text = 4;
	RichTextMsg rich_text = 5;
	VoiceMsg voice = 6;
	P2PRecver p2p_recver = 7;
	P2RRecver p2r_recver = 8;
}
message TalkResp {
}
