class Msg {

	public static ERR:string = "errpb.ERR";
	public static Head:string = "cspb.Head";
	public static User:string = "storepb.User";
	public static Player:string = "storepb.Player";
	public static RegInfo:string = "storepb.User.RegInfo";
	public static DEBUG:string = "cspb.LoginReq.Debug";
	public static WECHAT:string = "cspb.LoginReq.Wechat";
	public static LoginReq:string = "cspb.LoginReq";
	public static LoginResp:string = "cspb.LoginResp";
	public static CreateRoomReq:string = "cspb.CreateRoomReq";
	public static CreateRoomResp:string = "cspb.CreateRoomResp";
	public static DismissRoomReq:string = "cspb.DismissRoomReq";
	public static DismissRoomResp:string = "cspb.DismissRoomResp";
	public static EnterRoomReq:string = "cspb.EnterRoomReq";
	public static EnterRoomResp:string = "cspb.EnterRoomResp";
	public static LeaveRoomReq:string = "cspb.LeaveRoomReq";
	public static LeaveRoomResp:string = "cspb.LeaveRoomResp";
	public static GetRoomPlayerInfoReq:string = "cspb.GetRoomPlayerInfoReq";
	public static GetRoomPlayerInfoResp:string = "cspb.GetRoomPlayerInfoResp";
	public static RoomNotify:string = "cspb.RoomNotify";
	public static TextMsg:string = "talkpb.TextMsg";
	
}